terraform/subnet.tf
resource "aws_subnet" "group-two-subnet-a" {
  # reference the vpc
  vpc_id     = aws_vpc.group-two-vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "eu-west-1a"

  tags = {
    Name = "group-two-subnet-a"
  }
}

resource "aws_subnet" "group-two-subnet-b" {
  # reference the vpc
  vpc_id     = aws_vpc.group-two-vpc.id
  cidr_block = "10.0.2.0/24"
  availability_zone = "eu-west-1b"

  tags = {
    Name = "group-two-subnet-b"
  }
}
