terraform/vpc.tf
resource "aws_vpc" "group-two-vpc" {
   cidr_block       = "10.0.0.0/16"
   instance_tenancy = "default"

   tags = {
     Name = "group-two-vpc"
   }
}
